# socket-example

./: .directories.txt.swp  .gitignore  CMakeLists.txt  directories.txt
adapter/: CMakeLists.txt  adapter.cpp  adapter.hpp  async_server.cpp  async_server.hpp  main.cpp  model.cpp  model.hpp  model_api.cpp  model_api.h  protocol.h
async-asio/: CMakeLists.txt  async_tcp_echo_server.cpp
include/: protocol.h  serialization_helper.hpp
src/: CMakeLists.txt
src/adapter/: main.cpp
src/adapter/adapter/: adapter.cpp  adapter.hpp  async_server.hpp
src/adapter/model/: model.cpp  model.hpp  model_api.cpp  model_api.h
src/client-sync/: main.cpp
sync/: CMakeLists.txt
sync/client/: main.cpp
sync/server/: main.cpp
test/: CMakeLists.txt
test/simple/: CMakeLists.txt  sum.c  sum.cpp  sum.h  sum.hpp  sum_app.c  sum_test.cc
